[project]
name = "support"
version = "0.1.0"
description = ""
authors = [
    {name = "yee"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiogram (>=3.23.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "watchfiles (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
